crates/monochange/tests/snapshots/release_pull_requests__multiline_releaserequest_body@ungrouped.snap
---
source: crates/monochange/tests/release_pull_requests.rs
expression: contents
---
## Prepared release

- command: `release-pr`
- package `app` -> `app/v1.0.1`
- package `core` -> `core/v1.1.0`

## Release notes

### app 1.0.1

### Changed

- No package-specific changes were recorded; `workflow-app` was updated to 1.0.1.

### core 1.1.0

### Minor

#### add feature

## Changed files

- crates/app/CHANGELOG.md
- crates/app/Cargo.toml
- crates/core/CHANGELOG.md
- crates/core/Cargo.toml
