crates/monochange/tests/snapshots/release_pull_requests__multiline_releaserequest_commitmessage_body@group.snap
---
source: crates/monochange/tests/release_pull_requests.rs
expression: contents
---
Prepare release.

- release targets: sdk (1.1.0)
- released packages: workflow-app, workflow-core
- updated changelogs: changelog.md, crates/core/CHANGELOG.md
