crates/monochange/tests/snapshots/release_pull_requests__multiline_releaserequest_commitmessage_body@ungrouped.snap
---
source: crates/monochange/tests/release_pull_requests.rs
expression: contents
---
Prepare release.

- release targets: app (1.0.1), core (1.1.0)
- released packages: workflow-app, workflow-core
- updated changelogs: crates/app/CHANGELOG.md, crates/core/CHANGELOG.md
