crates/monochange/tests/snapshots/release_pull_requests__open_release_pull_request_dry_run_matches_snapshot@ungrouped.snap
---
source: crates/monochange/tests/release_pull_requests.rs
expression: redacted
---
{
  "issueComments": [],
  "manifest": {
    "changedFiles": [
      "crates/app/CHANGELOG.md",
      "crates/app/Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "- No package-specific changes were recorded; `workflow-app` was updated to 1.0.1."
              ],
              "title": "Changed"
            }
          ],
          "summary": [],
          "title": "app [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.1) ([DATE])"
        },
        "ownerId": "app",
        "ownerKind": "package",
        "path": "crates/app/CHANGELOG.md",
        "rendered": "[multiline text]"
      },
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "#### add feature"
              ],
              "title": "🚀 Feature"
            }
          ],
          "summary": [],
          "title": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])"
        },
        "ownerId": "core",
        "ownerKind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[multiline text]"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actorProfiles": true,
            "commitWebUrls": true,
            "issueComments": true,
            "relatedIssues": true,
            "reviewRequestLookup": true
          },
          "host": "github.com",
          "introduced": null,
          "lastUpdated": null,
          "provider": "github",
          "relatedIssues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add feature",
        "targets": [
          {
            "bump": "minor",
            "changeType": "minor",
            "evidenceRefs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "release-pr",
    "deletedChangesets": [],
    "dryRun": true,
    "groupVersion": null,
    "packagePublications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "app",
        "registry": "crates_io",
        "trustedPublishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.0.1"
      },
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trustedPublishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      }
    ],
    "plan": {
      "compatibilityEvidence": [],
      "decisions": [
        {
          "bump": "patch",
          "package": "cargo:crates/app/Cargo.toml",
          "plannedVersion": "1.0.1",
          "reasons": [
            "depends on `cargo:crates/core/Cargo.toml`"
          ],
          "trigger": "transitive-dependency",
          "upstreamSources": [
            "cargo:crates/core/Cargo.toml"
          ]
        },
        {
          "bump": "minor",
          "package": "cargo:crates/core/Cargo.toml",
          "plannedVersion": "1.1.0",
          "reasons": [
            "add feature"
          ],
          "trigger": "direct-change",
          "upstreamSources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [],
      "unresolvedItems": [],
      "warnings": [],
      "workspaceRoot": "."
    },
    "releaseTargets": [
      {
        "id": "app",
        "kind": "package",
        "members": [
          "app"
        ],
        "release": true,
        "renderedChangelogTitle": "app [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.1) ([DATE])",
        "renderedTitle": "app 1.0.1 ([DATE])",
        "tag": false,
        "tagName": "app/v1.0.1",
        "version": "1.0.1",
        "versionFormat": "namespaced"
      },
      {
        "id": "core",
        "kind": "package",
        "members": [
          "core"
        ],
        "release": true,
        "renderedChangelogTitle": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])",
        "renderedTitle": "core 1.1.0 ([DATE])",
        "tag": true,
        "tagName": "core/v1.1.0",
        "version": "1.1.0",
        "versionFormat": "namespaced"
      }
    ],
    "releasedPackages": [
      "workflow-app",
      "workflow-core"
    ],
    "version": null
  },
  "packagePublish": null,
  "publishRateLimits": null,
  "releaseCommit": null,
  "releaseRequest": {
    "autoMerge": true,
    "baseBranch": "develop",
    "body": "[multiline text]",
    "commitMessage": {
      "body": "[multiline text]",
      "subject": "chore(release): prepare release"
    },
    "headBranch": "automation/release/release-pr",
    "labels": [
      "release",
      "automated",
      "preview"
    ],
    "owner": "ifiokjr",
    "provider": "github",
    "repo": "monochange",
    "repository": "ifiokjr/monochange",
    "title": "chore(release): prepare release"
  },
  "releases": []
}
